--- a/static/css/mapviewer.css
+++ b/static/css/mapviewer.css
@@ -630,6 +630,7 @@ body, html {
         gap: 15px;
         margin-bottom: 7px;
         margin-left: 10px;
+        margin-right: 10px;
         padding: 15px 20px;
         box-shadow: 0 2px 6px rgba(0,0,0,0.05);
         background-color: #ffffff;
