--- a/static/fonts/custom-icons.css
+++ b/static/fonts/custom-icons.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "custom-icons";
-    src: url("/static/fonts/custom-icons.woff2?eeff448078cf8961cdd78ab2c02ec1f1") format("woff2"),
-url("/static/fonts/custom-icons.woff?eeff448078cf8961cdd78ab2c02ec1f1") format("woff");
+    src: url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff2?eeff448078cf8961cdd78ab2c02ec1f1") format("woff2"),
+url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff?eeff448078cf8961cdd78ab2c02ec1f1") format("woff");
 }
 
 .icon:before {
