--- a/static/fonts/custom-icons.css
+++ b/static/fonts/custom-icons.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "custom-icons";
-    src: url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff2?eeff448078cf8961cdd78ab2c02ec1f1") format("woff2"),
-url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff?eeff448078cf8961cdd78ab2c02ec1f1") format("woff");
+    src: url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff2?6f7dea66378329d47e0fdfeed29d3b0d") format("woff2"),
+url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff?6f7dea66378329d47e0fdfeed29d3b0d") format("woff");
 }
 
 .icon:before {
@@ -228,7 +228,7 @@ url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff?eef
 .icon.icon-ecological-connectivity:before {
     content: "\f147";
 }
-.icon.icon-douglass-squirell:before {
+.icon.icon-douglass-squirrel:before {
     content: "\f148";
 }
 .icon.icon-coyote:before {
