--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -827,7 +827,7 @@
                     <div class="info-box-header">
                         <div class="info-box-title">Indicator Information</div>
                         <div class="indicator-icon">
-                            <i class="icon ${indicator.icon} indicator-icon"></i>
+                            <i class="icon ${indicator.icon}"></i>
                         </div>
                     </div>
                     <div class="text-content">
